--- a/style.css
+++ b/style.css
@@ -2,3 +2,12 @@ h1 {
     text-align: center;
     color: blue;
 }
+
+input, button {
+    padding: 7px;
+}
+
+fieldset {
+    margin-bottom: 20px;
+    width: 500px;
+}
