--- a/css/style.css
+++ b/css/style.css
@@ -21,3 +21,17 @@ label {
     width: 200px;
     display: inline-block;
 }
+
+body {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    background-color: white;
+}
+
+div {
+    padding: 7px;
+}
+
+.items {
+    width: 150px;
+    display: inline-block;
+}
