--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ input, button {
     padding: 2px;
 }
 
-#cartlist, #btn_remove {
+#cartlist, #add, #btn_remove {
     font-size: small;
     display: inline-block;
     width: 120px;
@@ -76,9 +76,9 @@ header {
     width: 200px;
 }
 
-header a:link, header a:hover, header a:visited, header a:active {
+nav a:link, nav a:hover, nav a:visited, nav a:active {
     text-decoration: none;
-    color: darkblue;
+    color: cornsilk;
 }
 
 nav {
@@ -123,19 +123,21 @@ article {
     max-width: 700px;
     padding: 5px;
     background-color: white;
+    box-shadow: 0px 2px 5px #1c1a19;
     border-radius: 5px;
 }
  
 aside {
     display: inline-block;
     vertical-align: top;
+    text-align: left;
     width: 440px;
-    background-color: lightgrey;
+    background-color: whitesmoke;
     box-shadow: 0px 2px 5px #1c1a19;
     border-radius: 5px;
     padding: 10px;
     margin-left: 10px;
-    color: black;
+    color: rgb(58, 9, 9);
     font-size: 0.9em;
 }
  
@@ -144,7 +146,8 @@ footer {
     margin: 10px;
     border: 1px solid grey;
     border-radius: 5px;
-    background-color: white;
+    background-color: whitesmoke;
+    box-shadow: 0px 2px 5px #1c1a19;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 0.8em;
 } 
