--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,7 @@ div {
 .title {
     font-size: x-large;
     font-family: fantasy;
+    text-shadow:  0px 2px 5px #1c1a19;
 }
 
 header {
@@ -86,10 +87,12 @@ nav {
     vertical-align: top;
     padding: 5px; 
     width: 1000px;
+    text-shadow:  0px 2px 5px #1c1a19;
 }
 
 h1 {
     color: cornsilk;
+    text-shadow:  0px 2px 5px #1c1a19;
 }
 
 nav li {
